Added lesson publish endpoint
